<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <FrameLayout
                android:id="@+id/create_event_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <EditText
                android:id="@+id/event_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/item_grey"
                android:text=""
                android:inputType="text"
                android:hint="@string/name"
                android:theme="@style/FontTheme" />

            <EditText
                android:id="@+id/event_description_input"
                android:layout_below="@id/event_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="17dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/item_grey"
                android:text=""
                android:inputType="text"
                android:hint="@string/description"
                android:theme="@style/FontTheme" />

            <EditText
                android:id="@+id/event_date_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/event_description_input"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/rounded_corner"
                android:text=""
                android:inputType="text"
                android:hint="@string/date"
                android:theme="@style/FontTheme" />

            <EditText
                android:id="@+id/event_time_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/event_date_input"
                android:layout_alignParentRight="true"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/rounded_corner"
                android:text=""
                android:inputType="text"
                android:hint="@string/time"
                android:theme="@style/FontTheme" />

            <EditText
                android:id="@+id/event_location_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/event_time_input"
                android:layout_alignParentRight="true"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/rounded_corner"
                android:text=""
                android:inputType="text"
                android:hint="@string/location"
                android:theme="@style/FontTheme" />



            <Button
                android:id="@+id/eventPoster_create"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_below="@id/event_location_input"
                android:text="@string/add_image"
                android:backgroundTint="@color/item_blue"
                android:fontFamily="monospace"
                android:textSize="25sp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="35dp" />

            <ImageView
                android:id="@+id/promotionalQR"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_below="@id/eventPoster_create"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="26dp" />

            <ImageView
                android:id="@+id/checkinQR"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_below="@id/eventPoster_create"
                android:layout_alignParentRight="true"
                android:layout_marginTop="26dp"
                android:layout_marginRight="1dp" />

            <Button
                android:id="@+id/create_the_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/promotionalQR"
                android:layout_alignParentRight="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:text="create"
                android:textSize="15sp"
                android:backgroundTint="@color/item_blue"
                android:fontFamily="monospace"/>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>