<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/item_grey"
    tools:context=".EditProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/item_grey">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/edit_profile_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/edit_profile_photo_text"
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:layout_below="@id/edit_profile_image"
                android:layout_alignParentStart="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:focusable="true"
                android:text="Edit profile photo"
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/delete_profile_photo_text"
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:text="Delete profile photo"
                android:layout_below="@id/edit_profile_image"
                android:textColor="@color/black"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:clickable="true"
                android:focusable="true"/>

            <EditText
                android:id="@+id/edit_profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_profile_image"
                android:layout_marginTop="49dp"
                android:background="@drawable/rounded_corner"
                android:fontFamily="monospace"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="@color/background_blue" />

            <EditText
                android:id="@+id/edit_profile_homepage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_profile_contact"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_corner"
                android:fontFamily="monospace"
                android:hint="@string/home_page"
                android:inputType="textWebEmailAddress"
                android:minHeight="48dp"
                android:textColor="@color/background_blue" />

            <EditText
                android:id="@+id/edit_profile_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_profile_name"
                android:layout_marginTop="19dp"
                android:background="@drawable/rounded_corner"
                android:fontFamily="monospace"
                android:hint="@string/contact"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="@color/background_blue" />

            <Button
                android:id="@+id/save_edited_profile_button"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_profile_contact"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="146dp"
                android:layout_marginTop="84dp"
                android:layout_marginEnd="146dp"
                android:backgroundTint="@color/primary_blue"
                android:fontFamily="monospace"
                android:text="@string/save" />

        </RelativeLayout>
    </ScrollView>

</FrameLayout>