<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container_frame_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/item_grey">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <Button
                android:id="@+id/notif_centre_button"
                android:layout_width="361dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="@color/item_blue"
                android:text="@string/notification_centre"
                android:textColor="@color/background_blue"
                android:textSize="20dp"
                android:theme="@style/FontTheme" />

            <Button
                android:id="@+id/map_button"
                android:layout_width="361dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/notif_centre_button"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="@color/item_blue"
                android:text="@string/map"
                android:textColor="@color/background_blue"
                android:textSize="20dp"
                android:theme="@style/FontTheme" />

            <TextView
                android:id="@+id/attendee_list_textview"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/map_button"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/primary_blue"
                android:text="@string/attendees"
                android:textColor="@color/text_white"
                android:theme="@style/FontTheme" />

            <Spinner
                android:id="@+id/attendee_spinner"
                android:layout_width="310dp"
                android:layout_height="35dp"
                android:layout_below="@id/attendee_list_textview"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:padding="30dp" />

            <ListView
                android:id="@+id/list_of_attendees"
                android:layout_width="361dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/attendees_count_text"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/white"
                android:fontFamily="monospace"
                android:text="@string/attendees"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/attendees_count_text"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_below="@+id/set_milestone_button"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/primary_blue"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/text_white"
                android:textSize="20sp"
                android:theme="@style/FontTheme" />

            <Button
                android:id="@+id/set_milestone_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/attendee_spinner"
                android:layout_centerInParent="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="@color/item_blue"
                android:text="set milestones"
                android:textColor="@color/background_blue"
                android:textSize="20sp"
                android:theme="@style/FontTheme" />

        </RelativeLayout>



</FrameLayout>
